# miniapp_ewald

./: .gitignore  CMakeLists.txt  README.md  export_this.sh  ini_conf  ini_conf.cpp  ini_conf.cpp~  launch.sh  loads.sh  plot_results.py  plot_results.py~  polaris_results_1.txt  polaris_results_1.txt~  run.sh  test_20k.dat~  test_20k_home.dat~
build2/: CMakeCache.txt  Makefile  cmake_install.cmake
build3/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
long_masscharge_list/: functions.cpp  functions.hpp  gmon.out  input.txt  main
serial/: Makefile~  classes.cpp  functions.cpp  functions.cpp~  functions.hpp  functions.hpp~  main  main.cpp  output_real  output_recip
serial_original/: Makefile  classes.cpp  classes.hpp  functions.cpp  functions.hpp  main
short_masscharge_list/: classes.cpp~  classes.hpp  classes.hpp~  functions.cpp  main.cpp
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt
src/cpu/: CMakeLists.txt  functions.cpp
with_cuda/: Makefile  classes.cpp  classes.hpp  cuda_docker.txt  dev_functions.cu  dev_functions.hpp  functions.cpp  functions.hpp  main  main.cpp  prof_cuda.txt  prof_cuda_NC.txt  prof_cuda_NK.txt  prof_cuda_NK_trace.txt  prof_cuda_trace.txt  rep_analysis_cuda.txt  report1.qdrep  report1.sqlite  report2.qdrep  report2.sqlite  report3.qdrep  report3.sqlite  report4.qdrep  report4.sqlite  report5.qdrep  report5.sqlite  report6.qdrep  report6.sqlite  report7.qdrep  report7.sqlite  report8.qdrep  report8.sqlite  report9.qdrep  report9.sqlite  report_cuda.txt  run_cuda_container.sh  use_nsight.txt
with_omp_offload/: Makefile~  (+26 more)
(+84 files in other folders)
